[package]
name = "librepdf"
version = "0.1.0"
edition = "2024"

[dependencies]
nom = "8"

[lints.clippy]
all.level = "deny"
indexing_slicing.level = "deny"
arithmetic_side_effects.level = "deny"
integer_division.level = "deny"
float_arithmetic.level = "deny"
cast_lossless.level = "deny"
fallible_impl_from.level = "deny"
cast_possible_truncation.level = "deny"
cast_precision_loss.level = "deny"
cast_sign_loss = "deny"
cast_possible_wrap = "deny"
checked_conversions = "deny"
unnecessary_cast = "deny"
as_conversions = "deny"
lossy_float_literal = "deny"
should_implement_trait = "deny"
wrong_self_convention = "deny"
trivially_copy_pass_by_ref = "deny"
mut_from_ref = "deny"
type_complexity = "deny"
too_many_arguments = "deny"
redundant_pub_crate = "deny"
redundant_clone = "deny"
large_enum_variant = "deny"
multiple_crate_versions = "warn"
unwrap_used = "deny"
expect_used = "deny"
panic = "deny"
panic_in_result_fn = "deny"
implicit_hasher = "deny"
missing_safety_doc = "deny"
missing_panics_doc = "deny"
dbg_macro = "warn"