[package]
name = "librepdf"
version = "0.1.0"
edition = "2024"

[dependencies]
hex = "0.4.3"
nom = "8"

[lints.rust]
unexpected_cfgs = { level = "allow", check-cfg = ['cfg(kani)'] }

[lints.clippy]
all.level = "deny"
indexing_slicing.level = "deny"
arithmetic_side_effects.level = "deny"
integer_division.level = "deny"
#float_arithmetic.level = "deny"
cast_lossless.level = "deny"
fallible_impl_from.level = "deny"
cast_possible_truncation.level = "deny"
cast_precision_loss.level = "deny"
cast_sign_loss.level = "deny"
cast_possible_wrap.level = "deny"
checked_conversions.level = "deny"
unnecessary_cast.level = "deny"
as_conversions.level = "deny"
lossy_float_literal.level = "deny"
should_implement_trait.level = "deny"
wrong_self_convention.level = "deny"
trivially_copy_pass_by_ref.level = "deny"
mut_from_ref.level = "deny"
type_complexity.level = "deny"
too_many_arguments.level = "deny"
redundant_pub_crate.level = "deny"
redundant_clone.level = "deny"
large_enum_variant.level = "deny"
multiple_crate_versions.level = "warn"
unwrap_used.level = "deny"
expect_used.level = "deny"
panic.level = "deny"
panic_in_result_fn.level = "deny"
implicit_hasher.level = "deny"
missing_safety_doc.level = "deny"
missing_panics_doc.level = "deny"
dbg_macro.level = "warn"
